--- a/Gemini/gemini.service
+++ b/Gemini/gemini.service
@@ -4,11 +4,14 @@ After=network.target
 
 [Service]
 Type=simple
-User=geminiuser  # Replace with your non-root username
+User=geminiuser
 Environment="PATH=/opt/gemini/venv/bin:/usr/bin"
-ExecStart=/opt/gemini/venv/bin/streamlit run /opt/gemini/app.py
+ExecStart=/opt/gemini/venv/bin/streamlit run /opt/gemini/gemini_app.py
 WorkingDirectory=/opt/gemini/
 Restart=always
+RestartSec=10
+StandardOutput=journal
+StandardError=journal
 
 [Install]
 WantedBy=multi-user.target
